--- a/.github/workflows/update-website.yml
+++ b/.github/workflows/update-website.yml
@@ -12,6 +12,5 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Update Website
+        run: sudo cp -R ./* /usr/share/nginx/blueanimates/website/
